Database Functions Changes

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -131,6 +131,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "capstone-frontend"
+    }
+  },
+  "defaultProject": "capstone-frontend",
+  "cli": {
+    "analytics": "1bcdef5c-345e-4fff-91af-77a5c3108f12"
+  }
 }
